# woodoku-nn

./: CMakeLists.txt  README.md  figures.txt  gradinit.py  pywood.vcxproj  pywood.vcxproj.filters  test.vcxproj  test.vcxproj.filters  woodoku.sln  woodoku.vcxproj  woodoku.vcxproj.filters
include/: field.h  figure.h  solver.h
py/: cheat.py  play.py  test.py  train.py  train2.py
src/: field.cpp  figure.cpp  play_games.cpp  python.cpp  solver.cpp  woodoku.cpp
trained/: 3000.torch  576.torch  990.torch  scripted_3000.torch
